--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/foundation.min.js"></script>
 	</head>
 	<body>
+		 <a href="../../../index.html" class="enllac-retorn">&lt;&lt; Torna</a>
 		<div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-8 large-4 xxlarge-2 align-self-middle quadre-titol bg-black">
         <h1>Històries al cub</h1>
