--- a/entrevistats/omar_sarmad/ca/altres.html
+++ b/entrevistats/omar_sarmad/ca/altres.html
@@ -16,9 +16,7 @@
 </head>
 
 <body>
-
-  <a href="#" class="Torna fluid animated infinite fadeIn" >&lt;&lt;Torna</a>
-
+<a href="../../../index.html" class="enllac-retorn">&lt;&lt; Torna</a>
   <div class="grid-container fluid">
 
     <div class="grid-x align-center">
