--- a/entrevistats/omar_sarmad/ca/alumnes.html
+++ b/entrevistats/omar_sarmad/ca/alumnes.html
@@ -16,8 +16,7 @@
 
 <body>
 
-<a href="#" class="Torna fluid animated infinite fadeIn" >&lt;&lt;Torna</a>
-
+<a href="../../../index.html" class="enllac-retorn">&lt;&lt; Torna</a>
   <div class="grid-container fluid">
 
     <div class="grid-x align-center">
