--- a/entrevistats/omar_sarmad/ca/entrevista.html
+++ b/entrevistats/omar_sarmad/ca/entrevista.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<a href="#" class="Torna fluid animated infinite fadeIn" >&lt;&lt;Torna</a>
+<a href="../../../index.html" class="enllac-retorn">&lt;&lt; Torna</a>
 
   <div class="grid-container fluid">
 
