--- a/entrevistats/omar_sarmad/ca/index.html
+++ b/entrevistats/omar_sarmad/ca/index.html
@@ -17,7 +17,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
-  <a href="#" class="Torna fluid animated infinite fadeIn" >&lt;&lt;Torna</a>
+<a href="../../../index.html" class="enllac-retorn">&lt;&lt; Torna</a>
 
   <div class="grid-container ">
 
