--- a/entrevistats/omar_sarmad/es/altres.html
+++ b/entrevistats/omar_sarmad/es/altres.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <a href="#" class="Torna fluid animated infinite fadeIn" >&lt;&lt;Vuelve</a>
+  <a href="../../../index.html" class="enllac-retorn">&lt;&lt; Vuelve</a>
 
   <div class="grid-container fluid">
 
