--- a/entrevistats/omar_sarmad/es/entrevista.html
+++ b/entrevistats/omar_sarmad/es/entrevista.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-
-    <a href="#" class="Torna fluid animated infinite fadeIn" >&lt;&lt;Vuelve</a>
+  <a href="../../../index.html" class="enllac-retorn">&lt;&lt; Vuelve</a>
 
   <div class="grid-container fluid">
 
