--- a/entrevistats/omar_sarmad/es/index.html
+++ b/entrevistats/omar_sarmad/es/index.html
@@ -18,7 +18,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
-  <a href="#" class="Torna fluid animated infinite fadeIn" >&lt;&lt;Vuelve</a>
+  <a href="../../../index.html" class="enllac-retorn">&lt;&lt; Vuelve</a>
 
   <div class="grid-container ">
 
